Fix twint spacing on mobile

--- a/src/styles/components/_responsive.scss
+++ b/src/styles/components/_responsive.scss
@@ -170,4 +170,8 @@
 		}
 	}
 
+	#rnw-paylink-button-drydk{
+		margin-top: 2rem;
+	}
+
 }
